# spgen

./: README.md  spgen.cabal  spgen_doc.md
css/: skeleton.css
src/: Main.hs  Spgen.hs
src/Spgen/: Definitions.hs  Parser.hs  Writer.hs
