name:                spgen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/klarasch/spgen#readme
license:             BSD3
license-file:        LICENSE
author:              Kl치ra Scholleov치
maintainer:          klara@ksch.com
copyright:           2017 Kl치ra Scholleov치
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable spgen
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       cmdargs,
                       directory,
                       parsec,
                       either,
                       containers,
                       blaze-html,
                       blaze-markup
